--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="https://www.opentable.com.mx/r/meson-la-posada-reservations-crucecita?restref=1395706&lang=es-MX&ot_source=Restaurant%20website" target="_black"> Reserva tu Mesa en Nuestros Restaurantes</a>
     <a href="http://buggieshuatulco.com/" target="_black"> Renta un Buggy y Explora Huatulco</a>
     <a href="https://ilendyoumycar.com/" target="_black"> Renta de Autos para tu Comodidad</a>
-    <a href="quetzalivilla.com" target="_black"> Cabañas Frente al Mar</a>
+    <a href="https://quetzalivilla.com/" target="_black"> Cabañas Frente al Mar</a>
     <a href="https://www.instagram.com/huatulcobestwestern/" target="_black"> Síguenos en Redes Sociales</a>
     </div>
     </div>
